--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,14 @@
 <html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <title>Flask HTTP请求方法处理</title>
+</head>
    <body>
-      
-      <form action = "http://localhost:5000/login" method = "post">
-         <p>Enter Name:</p>
-         <p><input type = "text" name = "nm" /></p>
-         <p><input type = "submit" value = "submit" /></p>
+      <form action = "http://192.168.1.3:8090/login" method = "post">
+         <p>输入姓名:</p>
+         <p><input type = "text" name = "name" value=""/></p>
+         <p><input type = "submit" value = "提交" /></p>
       </form>
-      
+
    </body>
 </html>
