--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,8 +1,13 @@
-<!doctype html>
-<body><h1>Hello from Flask</h1></body>
-<hr>
-{% if name %}
-  <h4>Hello {{ name }}!</h4>
-{% else %}
-  <h4>Hello World!</h4>
-{% endif %}
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Flask 模板示例</title>
+</head>
+<body>
+	{% if marks>50 %}
+	<h3>success!!</h3>
+	{% else %}
+	<h3>failed</h3>
+	{% endif %}
+</body>
+</html>
