更新了index.html中指向javascript代码的错误引导

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-	<script type = "text/javascript">
+	<script type = "text/javascript"
 		src = "{{ url_for('static', filename = 'hello.js') }}" ></script>
     </head>
     <body>
